tools/tests/errors/surf_type_15.ki
# type/operator: '%' (modulo) is undefined for a String left operand
discard "abc" % 5
